--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -7527,6 +7527,37 @@ a.anchor-link {
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h4 id="P1---Optimization-w/Equality-Constraints-(40-pts)">P1 - Optimization w/Equality Constraints (40 pts)<a class="anchor-link" href="#P1---Optimization-w/Equality-Constraints-(40-pts)">¶</a></h4>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>Consider the optimization problem <strong>Max Expected Return w/Target Risk</strong>:</p>
+<p>$$
+\begin{cases}
+\underset{\omega_1 \omega_2} \max &amp; R_P (\omega_1, \omega_2) = \mu_1 \omega_1 + \mu_2 \omega_2 \tag{1}
+\\
+\text{s.t.} &amp; \sqrt{\sigma_1^2 \omega_1^2 + 2\rho_{1, 2} \cdot \sigma_1 \sigma_2 + \sigma_2^2 \omega_2^2} = \sigma_T
+\\
+&amp; \omega_1 + \omega_2 = 1
+\end{cases}
+$$</p>
+</div>
+</div>
+</div>
+</div>
 </main>
 </body>
 </html>
