--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -7818,6 +7818,47 @@ $$</p>
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h4 id="Optimization-w/Inequality-Constraints-(20-pts)">Optimization w/Inequality Constraints (20 pts)<a class="anchor-link" href="#Optimization-w/Inequality-Constraints-(20-pts)">¶</a></h4>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>Solve analytically (at least) one of the two following problems:</p>
+<p>$$
+\begin{cases}
+\underset{x_1, x_2} \max &amp; (x_1 - 2)^2 + 2(x_2 - 1)^2 \tag{2}
+\\
+\text{s.t} &amp; x_1 + 4x_2 \leq 3
+\\
+&amp; x_1 \geq x_2
+\end{cases}
+$$</p>
+<p>$$
+\begin{cases}
+\underset{x_1, x_2} \max &amp; 5 - x_1^2 - x_1x_2 - 3x_2^2 \tag{3}
+\\
+\text{s.t} &amp; x_1, x_2 \geq 0
+\\
+&amp; x_1 x_2 \geq 2
+\end{cases}
+$$</p>
+<p>and use an optimizer to verify your answer.</p>
+</div>
+</div>
+</div>
+</div>
 </main>
 </body>
 </html>
