--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -7652,6 +7652,13 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Lagrangian-Partial-Derivatives">Lagrangian Partial Derivatives<a class="anchor-link" href="#Lagrangian-Partial-Derivatives">¶</a></h5><p>To find the stationary points, we take the partial derivatives of $\mathcal{L}$ and set them to zero:</p>
+<p>$$
+\frac{\partial \mathcal{L}}{\partial x_1} = -2x_1 - x_2 + \lambda_1 + \lambda_3 x_2 = 0 \tag{4}
+$$
+$$
+\frac{\partial \mathcal{L}}{\partial x_2} = -x_1 - 6x_2 + \lambda_2 + \lambda_3 x_1 = 0 \tag{5}
+$$</p>
 </div>
 </div>
 </div>
