--- a/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
+++ b/FE630 - Homework/FE630 - Homework #2/fe630-hw2-md/fe630-hw2.html
@@ -7595,21 +7595,10 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h5 id="Problem-Formulation">Problem Formulation<a class="anchor-link" href="#Problem-Formulation">¶</a></h5>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>The given optimization problem is:</p>
+<h5 id="Problem-Formulation">Problem Formulation<a class="anchor-link" href="#Problem-Formulation">¶</a></h5><p>The given optimization problem is:</p>
 <p>$$
 \begin{cases}
-\underset{x_1, x_2}{\max} &amp; 5 - x_1^2 - x_1x_2 - 3x_2^2 \tag{3}
+\underset{x_1, x_2}{\max} &amp; 5 - x_1^2 - x_1x_2 - 3x_2^2 \tag{2}
 \\
 \text{s.t.} &amp; x_1, x_2 \geq 0
 \\
@@ -7626,20 +7615,9 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h5 id="Lagrangian-Formulation">Lagrangian Formulation<a class="anchor-link" href="#Lagrangian-Formulation">¶</a></h5>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>The Lagrangian $\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:</p>
+<h5 id="Lagrangian-Formulation">Lagrangian Formulation<a class="anchor-link" href="#Lagrangian-Formulation">¶</a></h5><p>The Lagrangian $\mathcal{L}$ for this problem includes the objective function and the constraints incorporated through Lagrange multipliers:</p>
 <p>$$
-\mathcal{L}(x_1, x_2, \lambda_1, \lambda_2, \lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \lambda_1 x_1 + \lambda_2 x_2 + \lambda_3 (x_1 x_2 - 2)
+\mathcal{L}(x_1, x_2, \lambda_1, \lambda_2, \lambda_3) = 5 - x_1^2 - x_1x_2 - 3x_2^2 + \lambda_1 x_1 + \lambda_2 x_2 + \lambda_3 (x_1 x_2 - 2) \tag{3}
 $$</p>
 <p>Here, $\lambda_1$, $\lambda_2$, and $\lambda_3$ are the Lagrange multipliers.</p>
 </div>
@@ -7659,6 +7637,79 @@ $$
 $$
 \frac{\partial \mathcal{L}}{\partial x_2} = -x_1 - 6x_2 + \lambda_2 + \lambda_3 x_1 = 0 \tag{5}
 $$</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Complementary-Slackness">Complementary Slackness<a class="anchor-link" href="#Complementary-Slackness">¶</a></h5><p>KKT conditions also include complementary slackness:</p>
+<p>$$
+\lambda_1 x_1 = 0, \quad \lambda_2 x_2 = 0, \quad \lambda_3 (x_1 x_2 - 2) = 0 \tag{6}
+$$</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Solve-the-System-of-Equations">Solve the System of Equations<a class="anchor-link" href="#Solve-the-System-of-Equations">¶</a></h5><p>We consider different cases based on the KKT conditions:</p>
+<ol>
+<li><strong>Case 1: Interior Solution</strong><ul>
+<li>Assume $\lambda_1 = \lambda_2 = \lambda_3 = 0$.</li>
+<li>Solve equations (4) and (5) directly.</li>
+</ul>
+</li>
+<li><strong>Case 2: Boundary Solution</strong><ul>
+<li>Assume $x_1 &gt; 0, x_2 &gt; 0$, and $x_1 x_2 = 2$.</li>
+<li>Substitute $x_1 = \frac{2}{x_2}$ into the equations and solve.</li>
+</ul>
+</li>
+</ol>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Analytical-Solution">Analytical Solution<a class="anchor-link" href="#Analytical-Solution">¶</a></h5><p><strong>Case 1</strong>: Assume $\lambda_1 = \lambda_2 = \lambda_3 = 0$.</p>
+<p>Plugging in $\lambda_1 = \lambda_2 = \lambda_3 = 0$ simplifies equations (4) and (5):</p>
+<p>$$
+-2x_1 - x_2 = 0 \implies x_2 = -2x_1 \quad \text{(not possible since $x_2 \geq 0$)} \tag{7}
+$$</p>
+<p><strong>Case 2</strong>: Boundary Solution with $x_1 x_2 = 2$</p>
+<p>Substitute $x_1 = \frac{2}{x_2}$ into equations (4) and (5) and solve:</p>
+<p>$$
+-2\left(\frac{2}{x_2}\right) - x_2 + \lambda_3 x_2 = 0 \quad \text{and} \quad -\frac{2}{x_2} - 6x_2 + \lambda_3 \frac{2}{x_2} = 0 \tag{8}
+$$</p>
+<p>Solving these equations:</p>
+<ol>
+<li>From equation (4): $\lambda_3 x_2 = 4/x_2 + x_2$</li>
+<li>Substitute $\lambda_3 x_2$ from equation (4) into equation (5), and solve for $x_2$. This could yield $x_2 = \sqrt{2}$, which when substituted back gives $x_1 = \sqrt{2}$, hence $x_1 x_2 = 2$.</li>
+</ol>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">¶</a></h5><p>Analytical solutions indicate that at $x_1 = x_2 = \sqrt{2}$, the constraints are satisfied, and from the substitution into the objective function, we can evaluate the maximum value.</p>
 </div>
 </div>
 </div>
